# ansible-ubuntu-common-setup

./: .gitignore  README.md  ansible.cfg  setup.cfg
inventory/base/: hosts.yaml
playbooks/: base.yaml
roles/cpu_operation_mode/: README.md
roles/cpu_operation_mode/defaults/: main.yaml
roles/cpu_operation_mode/tasks/: main.yaml
roles/disable_cstate/: README.md
roles/disable_cstate/defaults/: main.yaml
roles/disable_cstate/tasks/: main.yaml
roles/encrypt_partition/: README.md
roles/encrypt_partition/defaults/: main.yaml
roles/encrypt_partition/files/: encrypt_partition.sh
roles/encrypt_partition/tasks/: crypt.yaml  main.yaml
roles/rename_interface/: README.md
roles/rename_interface/defaults/: main.yaml
roles/rename_interface/tasks/: main.yaml
