[metadata]
name = ansible-test-project
summary = Playbook for virtual machine pre-setup
description-file =
    README.md
author = Anton Sidelnikov (@anton-sidelnikov)
classifier =
    Environment :: Ubuntu
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
